# data-hack-days-2025

./: .gitignore  README.md  app.py  collection_manager.py  data_pipeline.py  docker-compose.yml  extract_pdf_content.py  hybrid_search_qdrant.py  layoutparser_parser.py  main.py  pdfminer_parser.py  pdfplumber_parser.py  process_data.py  pyproject.toml  requirements.txt  run.py  test_pdf_extraction.py  text_cleaner.py
data/: filtered_motions.csv  geschaeft.csv
qdrant_storage/: raft_state.json
src/: test_simple_pipeline.py
src/db/: qdrant_client_manager.py
src/parsers/: pdfminer_parser.py  pdfplumber_parser.py  pypdf2_parser.py
src/pipeline/: data_pipeline.py  process_data.py  text_cleaner.py
src/tests/: test_layout_loading.py
